--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.23
 reportlab==4.0.4
-Werkzeug==2.3.7
+Werkzeug==2.0.1
 gunicorn==21.2.0
 python-dotenv==1.0.0
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+itsdangerous==2.0.1
+click==8.0.1
